syntax = "proto3";

package pos.category;

import "common.proto";
import "google/protobuf/wrappers.proto";

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
  bool is_active = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateCategoryReq {
  string name = 1;
  string description = 2;
  google.protobuf.BoolValue is_active = 3; // optional + presence
}

message UpdateCategoryReq {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.BoolValue is_active = 4;
}

message GetCategoryRes {
  Category category = 1;
}

message ListCategoryReq {
  common.PaginationReq pagination = 1;
}

message ListCategoryRes {
  repeated Category categories = 1;
  int32 page = 2;
  int32 limit = 3;
  int64 total = 4;
}

service CategoryService {
  rpc CreateCategory(CreateCategoryReq) returns (GetCategoryRes);
  rpc GetCategory(common.UUID) returns (GetCategoryRes);
  rpc ListCategories(ListCategoryReq) returns (ListCategoryRes);
  rpc UpdateCategory(UpdateCategoryReq) returns (GetCategoryRes);
  rpc DeleteCategory(common.UUID) returns (common.StatusRes);
}
